# pastebin-clone

./: docker-compose.yml
images/backend/: alembic.ini  pyproject.toml
images/backend/src/: celery.py  celery_app.py  main.py
images/backend/src/api/v1/: urls.py
images/backend/src/api/v1/handlers/: pastes.py
images/backend/src/core/: config.py
images/backend/src/db/: minio.py  postgres.py
images/backend/src/migrations/: env.py
images/backend/src/migrations/versions/: 48a2aa71a2ed_add_paste_model.py  da8895869b58_add_paste_model.py
images/backend/src/models/: pastes.py
images/backend/src/schemas/: base.py  pastes.py
images/backend/src/services/: pastes.py  tasks.py
images/frontend/: index.html  package.json
images/frontend/src/: App.vue
images/frontend/src/components/: PasteForm.vue  PasteItem.vue  PasteView.vue
images/frontend/src/composables/: usePastes.ts
images/frontend/src/pages/: ArchivePage.vue  CreatePage.vue  ViewPage.vue
images/frontend/src/router/: index.ts
images/frontend/src/types/: paste.ts
services/pastebin_api/: entrypoint.sh
services/pastebin_api/requirements/: requirements.in  requirements.txt
